---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1092                                 -
---------------------------------------------
- 2021-04-18                                -
---------------------------------------------
.: WSW: Task - CLONE - Pre-order through local website or link to other website (WSW-106)

---------------------------------------------
- 2021-04-18                                -
---------------------------------------------
.: WSW: Task - CLONE - Add delivery and price (WSW-107)

---------------------------------------------
- 2021-04-03                                -
---------------------------------------------
.: WSW: Task - Receipt module to list, filter receipts and the store page details (WSW-100)
.: WSW: Task - Update Favorite page UI (WSW-105)

- v1.0.1091                                 -
---------------------------------------------
- 2021-03-26                                -
---------------------------------------------
.: WSM: Task - Discount with showing minor symbol in invoice (WSM-316)

- v1.0.1090                                 -
---------------------------------------------
- 2021-03-11                                -
---------------------------------------------
.: WSM: Task - Save promotion to invoice as ObjectId (WSM-311)
.: WSM: Task - Show ETA delivery date repeatedly in invoice (WSM-322)

- v1.0.1080                                 -
---------------------------------------------
- 2021-02-24                                -
---------------------------------------------
.: WSM: Task - Adding invoice tracking dot (WSM-305)
.: WSM: Task - Update Invoice UI in mobile (WSM-307)

- v1.0.1070                                 -
---------------------------------------------
- 2021-02-06                                -
---------------------------------------------